--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  build_runner: ^2.4.6
+  mockito: ^5.4.2
   # path: ^1.8.0
 
 dev_dependencies:
